--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
   </head>
   <body>
     <div id="root"></div>
-  </body>
-  <script src="dist/bundle.js"></script>
+  <script type="text/javascript" src="manifest.ce7be066c4e176175955.js"></script><script type="text/javascript" src="vendor.c78bda82d85b3420dd8a.js"></script><script type="text/javascript" src="bundle.ad51f8b7e3b76bcf158e.js"></script></body>
 </html>
